--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
   <script data-main="js/app/main" src="js/require.js"></script>
 </head>
 <body>
+  <h1>Welcome, Let us improve bbquiz </h1>
+  
   
   
   
