--- a/test/client/test.html
+++ b/test/client/test.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>QUnit Test Suite</title>
-	<link rel="stylesheet" href="../qunit/qunit.css">
-	<script src="/js/lib/qunit/qunit.js"></script>
-	<script src="../quizModel.test.js"></script>
-	<script src="../quizCollection.test.js"></script>
-	<script src="../quizView.test.js"></script>
+	<link rel="stylesheet" href="/css/qunit-1.10.0.css">
+	<script src="/js/lib/qunit-1.10.0.js"></script>
+	<script src="/client/models/quizModel.test.js"></script>
+	<script src="/client/collections/quizCollection.test.js"></script>
+	<script src="/client/views/quizView.test.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
