--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,6 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
   <title>Backbone Boilerplate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Backboneboilerplate.com is a community driven effort to help developers learn and rapidly deploy single page web applications" />
@@ -15,8 +14,17 @@
   <script data-main="js/app/main" src="js/require.js"></script>
 </head>
 <body>
-  <h1>Welcome, Let us improve bbquiz </h1>
-  
+<div id="content">
+	<header id="main-header">
+		<hgroup>
+			<h1>Welcome, Let us improve bbquiz </h1>
+		</hgroup>
+	</header>
+	<section id="main-content">
+	</section>
+	<footer id="main-footer">
+	</footer>
+ </div>
   
   
   
