html changes added

--- a/client/index.html
+++ b/client/index.html
@@ -17,11 +17,13 @@
 <div id="content">
 	<header id="main-header">
 		<hgroup>
-			<h1>Welcome, Let us improve bbquiz </h1>
+			<h1>This is the header section </h1>
 		</hgroup>
 	</header>
 	<section id="main-content">
+		This is the Main content section
 	</section>
+	<section id="actions">This is the actions section</section>
 	<footer id="main-footer">
 	</footer>
  </div>
