--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
   <script  src="js/common-config.js"></script>
   <script data-main="js/app/main" src="js/require.js"></script>
 </head>
-<body>
+<body class="main-bg">
 <div id="content">
 	<header id="main-header">
 		<hgroup>
