--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 <div id="content">
 	<header id="main-header">
 		<hgroup>
-			<h1>This is the header section </h1>
+			<h1><div></div></h1>
 		</hgroup>
 	</header>
 	<section id="main-content">
