implemented the timerview,questionview,results view

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Backbone Boilerplate</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Backboneboilerplate.com is a community driven effort to help developers learn and rapidly deploy single page web applications" />
+  <meta name="description" />
   <link rel="stylesheet" href="css/style.css" />
   <script  src="js/common-config.js"></script>
   <script data-main="js/app/main" src="js/require.js"></script>
@@ -23,7 +23,6 @@
 	<section id="main-content">
 		This is the Main content section
 	</section>
-	<section id="actions">This is the actions section</section>
 	<footer id="main-footer">
 	</footer>
  </div>
