Changes to HomePage UI to make it look as in  mockup

--- a/client/index.html
+++ b/client/index.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" xml:lang="en" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Backbone Boilerplate</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" />
-  <link rel="stylesheet" href="css/style.css" />
-  <script  src="js/common-config.js"></script>
-  <script data-main="js/app/main" src="js/require.js"></script>
-</head>
-<body class="main-bg">
-<div id="content">
-	<header id="main-header">
-		<hgroup>
-			<h1><div></div></h1>
-		</hgroup>
-	</header>
-	<section id="main-content">
-		This is the Main content section
-	</section>
-	<footer id="main-footer">
-	</footer>
- </div>
-  
-  
-  
-</body>
+<!--[if lt IE 7]>
+<html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" xml:lang="en" lang="en"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <title>QUIZ</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <meta name="description"/>
+        <link rel="stylesheet" href="css/style.css"/>
+        <script src="js/common-config.js"></script>
+        <script data-main="js/app/main" src="js/require.js"></script>
+    </head>
+    <body class="main-bg">
+        <div id="content">
+            <header id="main-header"></header>
+            <section id="main-content">
+            </section>
+            <footer id="main-footer"></footer>
+        </div>
+    </body>
 </html>
