unit test cases for the models implemented

--- a/test/client/test.html
+++ b/test/client/test.html
@@ -5,9 +5,8 @@
 	<title>QUnit Test Suite</title>
 	<link rel="stylesheet" href="/css/qunit-1.10.0.css">
 	<script src="/js/lib/qunit-1.10.0.js"></script>
-	<script src="/client/models/quizModel.test.js"></script>
-	<script src="/client/collections/quizCollection.test.js"></script>
-	<script src="/client/views/quizView.test.js"></script>
+	<script src="/js/common-config.js"></script>
+    <script data-main="/client/main" src="/js/require.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
