--- a/test/client/test.html
+++ b/test/client/test.html
@@ -5,6 +5,8 @@
 	<title>QUnit Test Suite</title>
 	<link rel="stylesheet" href="/css/qunit-1.10.0.css">
 	<script src="/js/lib/qunit-1.10.0.js"></script>
+	<script src="/js/lib/sinon-1.5.2.js"></script>
+	<script src="/js/lib/sinon-qunit-1.0.0.js"></script>
 	<script src="/js/common-config.js"></script>
     <script data-main="/client/main" src="/js/require.js"></script>
 </head>
