implemented the options using css

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="description"/>
         <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/option.css"/>
         <script src="js/common-config.js"></script>
         <script data-main="js/app/main" src="js/require.js"></script>
     </head>
